force-app/main/default/objects/Template_Schedule__c/Template_Schedule__c.object-meta.xml
<CustomObject>
    <label>Template Schedule</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Template Schedule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>