force-app/main/default/objects/Template_Schedule__c/fields/EndHour__c.field-meta.xml
<CustomField>
    <fullName>EndHour__c</fullName>
    <formula>HOUR(End__c)</formula>
    <label>EndHour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>