force-app/main/default/objects/Template_Schedule__c/fields/EndMinutes__c.field-meta.xml
<CustomField>
    <fullName>EndMinutes__c</fullName>
    <formula>MINUTE(End__c)</formula>
    <label>EndMinutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>