force-app/main/default/objects/Template_Schedule__c/fields/Multi_Day__c.field-meta.xml
<CustomField>
    <fullName>Multi_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Day</label>
    <type>Checkbox</type>
</CustomField>