force-app/main/default/objects/Template_Schedule__c/fields/Shift_Template__c.field-meta.xml
<CustomField>
    <fullName>Shift_Template__c</fullName>
    <label>Shift Template</label>
    <referenceTo>Shift_Template__c</referenceTo>
    <relationshipLabel>Template Schedules</relationshipLabel>
    <relationshipName>Template_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>