force-app/main/default/objects/Template_Schedule__c/fields/StartHour__c.field-meta.xml
<CustomField>
    <fullName>StartHour__c</fullName>
    <formula>HOUR(Start__c)</formula>
    <label>StartHour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>