force-app/main/default/objects/Template_Schedule__c/fields/StartMinutes__c.field-meta.xml
<CustomField>
    <fullName>StartMinutes__c</fullName>
    <formula>MINUTE(Start__c)</formula>
    <label>StartMinutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>